--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "build": "snowpack build"
   },
   "dependencies": {
-    "d3": "^4.0.0",
-    "idyll": "^5.0.0",
-    "idyll-d3-component": "^2.0.0"
+    "d3": "^6.7.0",
+    "idyll": "^5.5.3",
+    "idyll-d3-component": "^2.1.0"
   },
   "devDependencies": {
-    "gh-pages": "^0.12.0",
     "autoprefixer": "^10.2.5",
-    "tailwindcss": "^2.1.2",
+    "gh-pages": "^0.12.0",
     "postcss": "^8.2.13",
-    "postcss-cli": "^8.3.1"
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^2.1.2"
   }
 }
