--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "authorView": false
   },
   "scripts": {
-    "start": "idyll",
-    "buildCss": "postcss --use tailwindcss autoprefixer -o build/static/idyll_styles.css styles.css",
-    "build": "snowpack build"
+    "start": "node scripts/build.js --watch",
+    "build": "node scripts/build.js"
   },
   "dependencies": {
     "d3": "^6.7.0",
@@ -19,7 +18,6 @@
     "autoprefixer": "^10.2.5",
     "gh-pages": "^0.12.0",
     "postcss": "^8.2.13",
-    "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.1.2"
   }
 }
